@@ -73,7 +73,7 @@ void ReginaPart::importFile(const PacketImporter& importer,
         if (newTree) {
             ImportDialog dlg(widget(), newTree, packetTree,
                 treeView->selectedPacket(), parentFilter, dialogTitle);
-            if (dlg.exec() == QDialog::Accepted)
+            if (dlg.validate() && dlg.exec() == QDialog::Accepted)
                 packetView(newTree, true);
             else
                 delete newTree;
