@@ -86,6 +86,18 @@ NewPacketDialog::~NewPacketDialog() {
     delete creator;
 }
 
+bool NewPacketDialog::validate() {
+    if (chooser->hasPackets())
+        return true;
+    KMessageBox::sorry(this, i18n(
+        "No suitable parent packets could be found.\n"
+        "Some packets have particular requirements of their parents.  "
+        "For instance, a list of normal surfaces or angle structures must "
+        "be created beneath the triangulation in which they live.\n"
+        "See the reference manual for further information."));
+    return false;
+}
+
 void NewPacketDialog::slotOk() {
     // Get the parent packet.
     regina::NPacket* parentPacket = chooser->selectedPacket();
