@@ -26,9 +26,15 @@ Version 3.97  [ 21 November, 2003 ] - Third prerelease for version 4.0.
         Class NSimpleSurfaceBundle, NTrivialTri:
             - Added for recognition of trivial non-orientable triangulations.
     USER INTERFACE:
+        Class ExportDialog:
+            - New routine validate() to detect when there are no packets
+              suitable for export.
         Class ExtTabCtl, PacketTabbedUI, PacketTabbedViewerTab:
             - Allow changing the current tab (this required a new extension
               class to KTabCtl).
+        Class ImportDialog, NewPacketDialog:
+            - New routine validate() to detect when there are no
+              suitable parent packets.
         Class NScriptUI, NTextUI:
             - Fixed problems with word wrapping and line endings in
               the embedded text editor.
@@ -37,6 +43,8 @@ Version 3.97  [ 21 November, 2003 ] - Third prerelease for version 4.0.
         Class NTriGluingsUI:
             - Fixed the bug in updating tetrahedron labels when other
               tetrahedra are removed from a triangulation.
+        Class PacketChooser:
+            - New routine hasPackets() to detect empty packet choosers.
 
 Version 3.96  [ 31 October, 2003 ] - Second prerelease for version 4.0.
     OVERALL:
